Solucionado 'deprecated' -> Problemas con conversion string a url